# allegro-cli

./: .gitignore  AI_INTEGRATION.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: bump.yml  ci.yml  release.yml
agent_specs/: tools.json
allegro_cli/: config.py  cookie_import.py  main.py  output.py  scraper.py
allegro_cli/api/: client.py  mock_client.py  models.py
allegro_cli/commands/: cart.py  config_cmd.py  login.py  packages.py  search.py
skills/allegro-cli/: SKILL.md
tests/: test_cli.py  test_config.py  test_e2e.py  test_mock_client.py  test_scraper.py
tests/fixtures/: get_carts.json  get_packages.json  get_packages_summary.json  offer_page.html  search_empty.html  search_results.html
